# HMT

./: .env.example  .gitignore  CITATION.cff  NOTICE  README.md  pyproject.toml  requirements.txt
configs/: awm_style.yaml  default.yaml  flat_retrieval.yaml  local.example.yaml  mind2web_hmt.yaml  real_mind2web.yaml  real_webarena.yaml  webarena_hmt.yaml
configs/ablations/: no_fallback.yaml  no_hierarchy.yaml  no_planner.yaml  no_prepost_conditions.yaml  raw_element_ids.yaml
examples/mind2web/: T_mem_flight_one_way.jsonl  T_mem_phone_configuration.jsonl
examples/webarena/: 1.json  2.json  T_mem_anchor_navigation.jsonl  T_mem_reddit_prefix.jsonl  task_order.jsonl
hmt/: __init__.py
hmt/adapters/: __init__.py  awm_adapter.py  mind2web_adapter.py  webarena_adapter.py
hmt/baselines/: __init__.py  awm_style.py  flat_retrieval.py
hmt/core/: __init__.py  actor.py  condition_match.py  construction.py  cost.py  grounding_engine.py  memory_tree.py  (+12 more)
mind2web/: pipeline.py
prompts/: abstract_step.txt  actor.txt  base_actor.txt  consistency_repair.txt  describe.txt  memory_insert_check.txt  normalize.txt  planner.txt  segment.txt
schemas/: action_node.schema.json  actor_output.schema.json  experiment_config.schema.json  memory_insert_check.schema.json  memory_record.schema.json  normalized_intent.schema.json  planner_output.schema.json  segment_output.schema.json  stage_node.schema.json
scripts/: build_memory.py  inspect_memory.py  materialize_webarena_order.py  prepare_mind2web.py  recompute_metrics.py  run_mind2web.py  run_webarena.py
webarena/: pipeline.py
(+23 files in other folders)
